--- a/Главная.html
+++ b/Главная.html
@@ -208,17 +208,17 @@
     </section>
     <section class="u-align-center u-clearfix u-section-7" id="sec-15d4">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-large-text u-text u-text-default u-text-variant u-text-1"> Всё волшебство творится <span style="font-weight: 700;">в сердце Алтайской тайги</span>, за много километров от цивилизации, мобильного интернета и одноразовых сидений для унитаза. Ты будешь ехать верхом и твои ссаные трусы ( и что ты там еще возьмешь с собой)&nbsp; <span style="font-weight: 700;">будет тащить конь</span>. Так что <span style="font-weight: 700;">бежать тебе некуда</span>, приятель. <span style="font-weight: 700;">Решайся.</span> Время пришло. <span style="font-weight: 700;">Не ссы</span>. А то вырастут усы, как у ёбаной лисы.<br>
+        <p class="u-align-center u-large-text u-text u-text-default u-text-variant u-text-1"> Всё волшебство творится <span style="font-weight: 700;">в сердце Алтайской тайги</span>, за много километров от цивилизации, мобильного интернета и одноразовых сидений для унитаза. Ты будешь ехать верхом и твои ссаные трусы ( и что ты там еще возьмешь с собой)&nbsp; <span style="font-weight: 700;">будет тащить конь</span>. Так что <span style="font-weight: 700;">бежать тебе некуда</span>, приятель. <span style="font-weight: 700;">Решайся.</span> Время пришло. <span style="font-weight: 700;">Не ссы</span>. А то вырастут усы, как у ёбаной лисы.<br>
           <br>
           <span style="font-weight: 700;">стоимость тура (без стоимости трансфера)&nbsp;</span>
           <br> 265 тыс. руб *<br>
           <br>
           <span style="font-size: 1.125rem;">* это стоимость раннего бронирования до 01.03.2025, дальше будешь брать за 300 через тракториста&nbsp;</span>
         </p>
-        <p class="u-text u-text-default u-text-2">
+        <p class="u-align-center u-text u-text-2">
           <a class="u-active-none u-border-none u-btn u-button-link u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1" data-href="https://ты-че-пес.рф/images/transfer.png" data-target="_blank">как добраться</a>
         </p>
-        <a href="https://vk.me/tichepsina" class="u-border-none u-btn u-button-style u-palette-3-base u-btn-2" target="_blank">я еду!</a>
+        <a href="https://vk.me/tichepsina" class="u-align-center u-border-none u-btn u-button-style u-palette-3-base u-btn-2" target="_blank">я еду!</a>
       </div>
     </section>
     <section class="skrollable u-clearfix u-container-align-center u-image u-section-8" id="sec-d3c4" data-image-width="1280" data-image-height="960">
